--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.10",
+    "antd": "^3.26.7",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.4.4",
+    "echarts": "^4.6.0",
+    "nprogress": "^0.2.0",
+    "resize-detector": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
