--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "core-js": "^3.4.4",
     "echarts": "^4.6.0",
     "nprogress": "^0.2.0",
+    "query-string": "^6.10.1",
     "resize-detector": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -40,7 +42,9 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.10"
+    "svg-sprite-loader": "^4.2.0",
+    "vue-svg-loader": "^0.15.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
