--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "query-string": "^6.10.1",
     "resize-detector": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-highlightjs": "^1.3.3",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
@@ -42,6 +43,7 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "raw-loader": "^4.0.0",
     "svg-sprite-loader": "^4.2.0",
     "vue-svg-loader": "^0.15.0",
     "vue-template-compiler": "^2.6.11"
